Updates from ShareLaTeX

--- a/Hoofdstukken/B-Samenvatting.tex
+++ b/Hoofdstukken/B-Samenvatting.tex
@@ -1,17 +1,12 @@
-\chapter*{{\color{red}Samenvatting}} %Ongenummerd hoofdstuk
+\chapter*{Samenvatting} %Ongenummerd hoofdstuk
 \thispagestyle{empty} %Geen paginanummer deze pagina
 \backgroundsetup{contents=\includegraphics{BGbootALs},angle=0,scale=0.47,opacity=0.50,hshift=-634} %Instellingen voor achtergrondafbeelding
 \BgThispage %Achtergrond deze pagina
-\lipsum[1-4]
 
+Het interne betrouwbaarheidssysteem bij Seafood Connection wordt in de eerste plaats gekenmerkt door een `Urker mentaliteit'. Dit dringt door de hele organisatie en heeft hiermee een sterke indirecte band met de inrichting van de organisatie. Het managementteam wordt hierdoor in staat gesteld om onverdeeld in te spelen op gunstige marktontwikkelingen door drastische organisatorische veranderingen door te voeren. Afdelingen in het primaire waardeproces kunnen al naar gelang gecreëerd, weg genomen, of totaal omgegooid worden. Dit heeft tot gevolg dat de formele vastlegging van de veranderlijke organisatie een inhaalspel moet spelen met de bewegelijke onderneming. De organisatie is doeltreffend ingericht, maar er mist een zekere bewustheid voor interne controle. 
 
+De inherente risico’s van handelsbedrijven treden op de voorgrond bij de primaire processen. Er zijn zeker risico's aanwezig die inspelen op de onterechte verrijking door kwaadwillenden vanuit de marge. Bijvoorbeeld door onvolledigheid van de verkoopprijzen of onjuistheid van de inkoopprijzen. Een zwaarwegend risico omtrent vreemde valuta ontbreekt echter. Risico's die hiermee verband houden zijn ondernemingsrisico's en niet zozeer betrouwbaarheidsgericht. Desalniettemin wordt er ten behoeve van de primaire waardeketen een groot aantal maatregelen getroffen. Dit stelsel van maatregelen heeft met name een sterke invloed op de meest bedreigende risico's. 
 
+Toch zijn er maatregelen getroffen die zeker een invloed hebben op de navolgbaarheid en de verantwoordelijkheid die genomen dient te worden omtrent de omgang met vreemde valuta. Dit wordt bewerkstelligd door de nieuwe inzichtsmogelijkheden van Exact Synergy en een nauwere samenwerking tussen de afdelingen. Toezichthoudende en controlerende personen kunnen met deze middelen veel nauwkeuriger, maar ook breder kijken naar de geld-goederenbeweging en de rol die vreemde valuta hierin speelt. Echter worden de tekortkomingen van de interne controle nauwelijks besproken. Dit uit zich onder andere doordat de AOIB om de paar jaar herzien wordt, maar ook doordat er een zekere lusteloosheid lijkt te heersen bij machthebbende personen.
 
-
-
-
-
-
-\begin{comment}
-Een zakelijk rapport begint altijd met een (management)samenvatting. De belangstellende maar vaak gehaaste lezer moet snel weten waar het rapport over gaat en in welk kader het geschreven is, hoe het onderzoek is opgezet, wat de belangrijkste bevindingen zijn, de belangrijkste conclusies, aanbevelingen (adviezen) en (eventuele) financiële implicaties. Het is belangrijk dat de samenvatting de rode draad van je rapport toont13. Die rode draad is dan de basis voor je presentatie.
-\end{comment}
+De geïmplementeerde toezichtsmaatregelen begunstigen het inzicht in de geld-goederenbeweging in de primaire processen. Hierbij is de moeiteloze flexibiliteit van de organisatie de kroon op het stelsel van organisatorische maatregelen. De formele vastlegging van deze organisatie in de vorm van de AOIB wordt echter snel nagelaten. Er moet meer bewustzijn komen voor interne controle in het kader van compliance en het afleggen van verantwoordelijkheid over de beheersing van financiële vermogenswaarden en de hieraan verbonden risico's. Zonder deze bezinning gaat op den duur de formele vastlegging van de organisatie tekort schieten ten opzichte van de snel groeiende onderneming.
