--- a/Hoofdstukken/G3-organisatorischemaatregelen.tex
+++ b/Hoofdstukken/G3-organisatorischemaatregelen.tex
@@ -137,4 +137,4 @@ Samenvattend wordt het voornaamste betrouwbaarheidrisico (genummerd met `1' in f
 \newpage
 
 \subsection*{Conclusie}
-Ten behoeve van de primaire waardeketen worden een groot aantal maatregelen getroffen. Deze dragen bij om de betrouwbaarheidsrisico's in te perken of te mitigeren. De samenloop van maatregelen hebben met name een invloed op de meest bedreigende risico's die geïdentificeerd zijn bij de risico analyse. De vraag herrijst of de organisatie meegaand genoeg is om de ontwikkelingen van de onderneming te volgen. 
+Ten behoeve van de primaire waardeketen worden een groot aantal maatregelen getroffen. Deze dragen bij om de betrouwbaarheidsrisico's in te perken of te mitigeren. De samenloop van maatregelen hebben met name een invloed op de meest bedreigende risico's die geïdentificeerd zijn bij de risico analyse. De vraag herrijst of de organisatie meegaand genoeg is om de ontwikkelingen van de onderneming te volgen. Niet alleen moet de formele vastlegging aansluiting vinden bij de bedrijfsactiviteiten, ook moet het nageleefd worden. Management override is een voorbeeld waarbij het hebben van een voldoende organisatie geen nut meer zal hebben. 
