--- a/Hoofdstukken/G5-monitoring.tex
+++ b/Hoofdstukken/G5-monitoring.tex
@@ -1,7 +1,21 @@
-COSO 15 en 17
+\textbf{Een belangrijk onderdeel van de \gls{biv} en het hebben van \gls{ic} is om bewust de stappen van de Deming-cirkel te volgen. Deze zijn respectievelijk: Plan, Do, Check, Act. Of: Plan, Voer uit, Controleer, Corrigeer. Met deze stap wordt gekeken of de maatregelen naar behoren functioneren en of deze nog steeds aansluiten op de vernomen risico's. Misschien is het zelfs zo dat er nieuwe risico's zijn ontstaan of dat andere weggevallen zijn. \citep{bivpraktijk}}
 
-\textbf{Concrete vragen}
-\begin{itemize}
-    \item Worden de voorschriften en regels met betrekking tot interne betrouwbaarheid nageleefd?
-    \item Is het interne betrouwbaarheidssysteem nog steeds actueel en relevant voor de organisatie?
-\end{itemize}
+\begin{table}[!h]
+    \centering
+    \caption{Excerpt van de principes voor interne controle volgens COSO}
+    \begin{tabular}{l l}
+        \toprule
+        \textbf{Element} & \textbf{Principe} \\
+        \midrule
+        Monitoring & 16. Voert continu of periodiek evaluatie uit van de werking \\
+        & van de interne controle (of een combinatie van de twee) \\
+         & 17. Communiceert interne controle tekortkomingen \\
+        \bottomrule
+    \end{tabular}
+    \label{tab:monitoringprincipes}
+\end{table}
+
+Het laatste deel van het COSO-raamwerk is in tabel \ref{tab:monitoringprincipes} te vinden. Hoewel binnen de cultuur van SFC onderwerpen makkelijk ter sprake komen, komt het niet vaak voor dat de tekortkomingen tijdig gecommuniceerd worden. In plaats daarvan wordt de formele vastlegging van de AOIB om de paar jaar herzien, terwijl reorganisatie een snelle stap kan zijn. Het opnieuw indelen of toevoegen van afdelingen komt niet onregelmatig voor. Dit kan wel tot gevolg hebben dat de onderliggende AOIB een inhaalspel moet spelen. Toch worden de bedrijfs- en betrouwbaarheidsrisico's nauwlettend in de gaten gehouden door de verschillende mogelijkheden van monitoring die het managementteam ter beschikking heeft. \citep{aoibsfc}
+
+\subsection*{Conclusie}
+Het monitoren van de betrouwbaarheidsrisico's gebeurt haast continu. Door nieuwe technologische vooruitgang is het mogelijk een nieuw perspectief te krijgen op het functioneren van de organisatie. Echter worden de tekortkomingen van de interne controle nauwelijks besproken. Dit uit zich onder andere doordat de AOIB om de paar jaar herzien wordt.
