--- a/Hoofdstukken/H-Conclusie.tex
+++ b/Hoofdstukken/H-Conclusie.tex
@@ -1,13 +1,36 @@
 \chapter{Conclusie}
 \label{hoofdstuk:conclusie}
-\lipsum[1-7]
+\textbf{Wat is de kwaliteit van het interne betrouwbaarheidssysteem bij de primaire processen van Seafood Connection en hoe kan dit bijdragen dat er op een navolgbare en verantwoordelijke manier wordt omgegaan met vreemde valuta?}
+
+\medskip
+Het interne betrouwbaarheidssysteem bij Seafood Connection wordt in de eerste plaats gekenmerkt door een `Urker mentaliteit'. Dit dringt door de hele organisatie en heeft hiermee een sterke indirecte band met de inrichting van de organisatie. Binnen deze Urker cultuur wordt er onaandoenlijk hard gewerkt aan de visie van het managementteam. Problemen zijn goed bespreekbaar en gedrag afwijkend van de groep wordt snel aangesproken. Het managementteam wordt hierdoor in staat gesteld om onverdeeld in te spelen op gunstige marktontwikkelingen door drastische organisatorische veranderingen door te voeren. Afdelingen in het primaire waardeproces kunnen al naar gelang gecreëerd, weg genomen, of totaal omgegooid worden. Dit heeft tot gevolg dat de formele vastlegging van de veranderlijke organisatie een inhaalspel moet spelen met de bewegelijke onderneming. De organisatie is doeltreffend ingericht, maar er mist een zekere bewustheid voor interne controle. 
+
+Het managementteam heeft een voorkeur aan een functionele, effectieve organisatiestructuur. Er is echter geen actief, anticiperend organisatiebeleid waarbij betrouwbaarheidsrisico’s voortijdig aangepakt worden. De inherente risico’s van handelsbedrijven treden op de voorgrond bij de primaire processen.
+
 \vfill
 \begin{center}
   \makebox[\textwidth]{\includegraphics[width=1.09\paperwidth]{img050}}
 \end{center}
 
-\begin{comment}
+\noindent
+Hier is de ondernemingsdoelstelling om zoveel mogelijk een risico avers karakter te vervullen dat zich uit in een voorkeur voor het vastleggen van de marge. Eventuele betrouwbaarheidsbedreigingen waarbij middelen ontnomen worden van de onderneming kunnen kritiek zijn mochten zij werkelijkheid worden. Er zijn zeker risico's aanwezig die inspelen op de onterechte verrijking door kwaadwillenden vanuit de marge. Bijvoorbeeld door onvolledigheid van de verkoopprijzen of onjuistheid van de inkoopprijzen. Een zwaarwegend risico omtrent vreemde valuta ontbreekt echter. Bij het indekken van vreemde valuta wordt er op termijn de ene valuta uitgewisseld voor de ander. Risico's die hiermee verband houden zijn ondernemingsrisico's en niet zozeer betrouwbaarheidsgericht. 
 
+Desalniettemin wordt er ten behoeve van de primaire waardeketen een groot aantal maatregelen getroffen. Dit stelsel van maatregelen heeft met name een sterke invloed op de meest bedreigende risico's. Deze dragen bij om de betrouwbaarheidsrisico’s in te perken of te mitigeren. 
+
+Toch zijn er maatregelen getroffen die zeker een invloed hebben op de navolgbaarheid en de verantwoordelijkheid die genomen dient te worden omtrent de omgang met vreemde valuta. Dit wordt bewerkstelligd door de nieuwe inzichtsmogelijkheden van Exact Synergy en een nauwere samenwerking tussen de afdelingen. Toezichthoudende en controlerende personen kunnen met deze middelen veel nauwkeuriger, maar ook breder kijken naar de geld-goederenbeweging en de rol die vreemde valuta hierin speelt. 
+
+Het monitoren van de betrouwbaarheidsrisico's gebeurt haast continu. Door nieuwe technologische vooruitgang is het mogelijk een nieuw perspectief te krijgen op het functioneren van de organisatie. Echter worden de tekortkomingen van de interne controle nauwelijks besproken. Dit uit zich onder andere doordat de AOIB om de paar jaar herzien wordt, maar ook doordat er een zekere lusteloosheid lijkt te heersen bij machthebbende personen.
+
+\medskip
+
+De organisatie is sterk door een diepgaand stelsel van organisatorische maatregelen die helpen om de betrouwbaarheidsrisico's aanzienlijk in te perken. De geïmplementeerde toezichtsmaatregelen begunstigen het inzicht in de geld-goederenbeweging in de primaire processen. Hierbij is de moeiteloze flexibiliteit van de organisatie de kroon op het stelsel van organisatorische maatregelen. De formele vastlegging van deze organisatie in de vorm van de AOIB wordt echter snel nagelaten. Er moet meer bewustzijn komen voor interne controle in het kader van compliance en het afleggen van verantwoordelijkheid over de beheersing van financiële vermogenswaarden en de hieraan verbonden risico's. Zonder deze bezinning gaat op den duur de formele vastlegging van de organisatie tekort schieten ten opzichte van de snel groeiende onderneming.
+
+
+
+
+
+
+\begin{comment}
 \begin{center}
   \makebox[\textwidth]{\includegraphics[trim={0.25cm 0.45cm 0cm 0.9cm},clip,width=1.1\paperwidth]{img156}}
 \end{center}
@@ -19,5 +42,4 @@
 \begin{center}
   \makebox[\textwidth]{\includegraphics[trim={0.2cm 0.4cm 0cm 0.8cm},clip,width=1.1\paperwidth]{img052}}
 \end{center}
-
 \end{comment}
