--- a/Hoofdstukken/Z-Bijlagen.tex
+++ b/Hoofdstukken/Z-Bijlagen.tex
@@ -35,7 +35,7 @@
 \stepcounter{bijlage}
 \subsection*{\hypertarget{bij:treasury}{Bijlage \thebijlage}: de \gls{treasuryletter}}
 \addcontentsline{toc}{section}{Bijlage \thebijlage: de treasury letter}
-Zie ommezijde. {\color{red}Alleen de eerste twee pagina's nu.}
+Zie ommezijde. De volledige treasury letter is beschikbaar in de bijlagen bundel.
 \vfill
 \begin{center}
   \makebox[\textwidth]{\includegraphics[width=1.09\paperwidth]{scn255}}
@@ -51,4 +51,4 @@ Zie ommezijde.
 \begin{center}
   \makebox[\textwidth]{\includegraphics[width=1.09\paperwidth]{scn271}}
 \end{center}
-\includepdf[pages={1-2}]{../Bronnen/aoib.pdf}
+\includepdf[pages={1-38}]{../Bronnen/aoib.pdf}
